# pyshape

./: .coverage  .gitignore  README.md  azure-pipelines.yml  coverage.xml  coverage.xml_masterv1  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
scripts/: build.py  setup.py  test_runner.py
src/: shapes.py
tests/: conftest.py  test_shapes.py
